main.css
html, body {
  margin: 0;
  padding: 0;
}

body {
  height: 100vh;
  font-family: 'Open Sans', sans-serif;
  color: #333;
  font-size: 16px;
  line-height: 1.5;
  background-color: #ffffff;
  background-image: url("bg.jpg");
  background-repeat: no-repeat;
  background-position: center center;
  background-size: cover;
  background-attachment: fixed;
  overflow: scroll;
  display: grid;
  grid-row-gap: 2rem;
  grid-template-columns: 1fr minmax(auto , 64rem) 1fr;
  padding-top: 6rem;
}

header, section, footer {
  grid-column: 2/3;
}

header {
  position: fixed;
  width: 100%;
  top: 0;
  grid-column: 1/4;
  background: white;
  box-shadow: 0 0 1rem rgba(0, 0, 0, .1);
}

header div {
  display: flex;
  align-items: center;
  max-width: 64rem;
  margin: .5rem auto;
  flex-wrap: wrap;
}

header div h1 {
  text-transform: uppercase;
  margin: 0;
  font-weight: 700;
  letter-spacing: .3rem;
  padding: 0 1rem;
}

header div a {
  color: inherit;
  text-decoration: none;
  padding-left: 1rem;
  border-left: 1px solid #333;
  transition: .1s color ease-in-out;
}

header .social {
  flex: 1;
  display: grid;
  grid-auto-flow: column;
  grid-column-gap: .5rem;
  justify-content: end;
  padding-right: 1rem;
}

section, footer {
  padding: 0 1rem;
}

footer {
  margin-bottom: 2rem;
}

a:hover {
  color: #cfb53b;
}

#description {
  display: grid;
  grid-gap: 1rem;
}

#description p {
  margin: 0;
}

#gallery {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
  grid-gap: 3rem;
}

.galery-item {
  background-position: center center;
  background-size: cover;
  background-repeat: no-repeat;
  display: flex;
  height: 300px;
}

.galery-item p {
  font-size: 1.15rem;
  font-weight: 600;
  padding: 1rem;
  margin: 0;
  background: rgba(0, 0, 0, .7);
  align-self: flex-end;
  flex: 1;
  color: #cfb53b;
}

#gallery img {
  width: 100%;
  height: auto;
  object-fit: cover;
}

